[package]
name = "cli"
edition = "2021"

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-utils = "0.36.0"
ic-agent = "0.36.0"
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
yloader = { path = "../../../yllama.rs/yloader" }
ymath = { path = "../../../yllama.rs/ymath" }
half = { version = "2.4.1" }